@@ -73,6 +73,11 @@ cr_declaration_new (CRStatement *a_statement,
 		    GString *a_property, 
 		    CRTerm *a_value) ;
 
+
+CRDeclaration *
+cr_declaration_parse (CRStatement *a_statement,
+		      const guchar *a_str,
+		      enum CREncoding a_enc) ;
 CRDeclaration *
 cr_declaration_append (CRDeclaration *a_this, CRDeclaration *a_new) ;
 
