@@ -50,7 +50,7 @@ G_BEGIN_DECLS
 enum CRNumType
 {
         NUM_AUTO = 0,
-        NUM_GENERIC,        
+        NUM_GENERIC,
         NUM_LENGTH_EM,
         NUM_LENGTH_EX,
         NUM_LENGTH_PX,
